unpackaged/main/default/objects/Publication_Issue__c/Publication_Issue__c.object-meta.xml
<CustomObject>
    <label>Publication Issue</label>
    <nameField>
        <label>Publication Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>