unpackaged/main/default/objects/Publication_Issue__c/fields/No_of_Domestic_Runs__c.field-meta.xml
<CustomField>
    <fullName>No_of_Domestic_Runs__c</fullName>
    <label>No. of Domestic Runs</label>
    <summaryFilterItems>
        <field>Print_Run__c.Type__c</field>
        <operation>equals</operation>
        <value>Domestic</value>
    </summaryFilterItems>
    <summaryForeignKey>Print_Run__c.Publication_Issue__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>