unpackaged/main/default/objects/Publication_Issue__c/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <label>Publication</label>
    <referenceTo>Publication__c</referenceTo>
    <relationshipLabel>Publication Issues</relationshipLabel>
    <relationshipName>Publication_Issues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>