unpackaged/main/default/objects/Publication_Issue__c/fields/Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>Publication_Date__c</fullName>
    <label>Publication Date</label>
    <type>Date</type>
</CustomField>