unpackaged/main/default/objects/Publication_Issue__c/validationRules/Limit_no_of_Print_Runs.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_no_of_Print_Runs</fullName>
    <active>true</active>
    <errorConditionFormula>No_of_Domestic_Runs__c &gt; 1 ||  
No_of_International_Runs__c &gt; 1</errorConditionFormula>
    <errorMessage>Each Issue can only have a single Print Run of each Type.</errorMessage>
</ValidationRule>